[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/CityGrid.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
albedo_color = Color( 0.8, 0, 0.870588, 1 )
emission_enabled = true
emission = Color( 0.8, 0, 0.870588, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Curve3D" id=4]
resource_local_to_scene = true
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="PlaneMesh" id=5]
resource_local_to_scene = true

[node name="CityGridNode" type="Spatial"]
script = ExtResource( 1 )

[node name="RoadCSGPolygon" type="CSGPolygon" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 0.00607049, 0.132837, 0.231788, 0.132086, 0.237703, -0.00262284 )
mode = 2
path_node = NodePath("")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = true
material = SubResource( 3 )

[node name="RoadPath" type="Path" parent="."]
curve = SubResource( 4 )

[node name="FloorPlane" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 5 )
